# LetsGetRusty

./: .gitignore  Cargo.toml  README.md
lessons/0/0_SETUP/: extentions.md
lessons/0/1_Hello_World/: Cargo.toml
lessons/0/2_Variables/: Cargo.toml
lessons/0/3_Data_Types/: Cargo.toml
lessons/0/4_Constants_And_Statics/: Cargo.toml
lessons/0/5_Functions/: Cargo.toml
lessons/0/6_Control_Flow/: Cargo.toml
lessons/0/8_Ownership/: Cargo.toml
lessons/001_Hello_World/: Cargo.toml
lessons/003_Data_Types/src/: main.rs
lessons/006_Control_Flow/: Cargo.toml
lessons/007_Comments/: Cargo.toml
lessons/007_Comments/src/: main.rs
lessons/008_Ownership/src/: main.rs
lessons/009_Borrowing/: Cargo.toml
lessons/011_Strings_In_Rust/: Cargo.toml
lessons/012_Structs/src/: main.rs
lessons/013_Implementation_Blocks/: Cargo.toml
lessons/013_Implementation_Blocks/src/: main.rs
lessons/014_Tuple_Structs/src/: main.rs
lessons/015_Enums/: Cargo.toml
lessons/016_Matching/: Cargo.toml
lessons/017_Option/src/: main.rs
lessons/018_Result/src/: main.rs
lessons/019_Vectors/: Cargo.toml
lessons/020_Project_Structure_Overview/: Cargo.toml
lessons/021_Modules/: Cargo.toml
lessons/021_Modules/src/: lib.rs
lessons/022_Modules_Continued/: Cargo.toml
lessons/022_Modules_Continued/src/: lib.rs  main.rs
lessons/023_External_Dependencies/: Cargo.toml
lessons/023_External_Dependencies/src/: main.rs
lessons/024_Publishing_Your_Package/: Cargo.toml  README.md
lessons/024_Publishing_Your_Package/src/: auth_utils.rs  lib.rs  main.rs
lessons/025_Cargo_Features/: Cargo.toml
lessons/025_Cargo_Features/draw_consumer/: Cargo.toml
lessons/025_Cargo_Features/draw_consumer/src/: main.rs
lessons/025_Cargo_Features/src/: lib.rs
lessons/026_Cargo_Workspaces/: Cargo.toml
lessons/026_Cargo_Workspaces/blog_api/: Cargo.toml
lessons/026_Cargo_Workspaces/blog_shared/: Cargo.toml
lessons/026_Cargo_Workspaces/blog_web/: Cargo.toml
lessons/028_Integration_Tests/src/: lib.rs
lessons/028_Integration_Tests/tests/: savings_account.rs
lessons/029_Documentation/: Cargo.toml
lessons/029_Documentation/src/: lib.rs
lessons/030_Generics/src/: main.rs
lessons/031_Traits/src/: main.rs
lessons/033_Supertraits/: Cargo.toml
lessons/034_Trait_Objects/src/: main.rs
lessons/038_Generic_Lifetimes/: Cargo.toml
lessons/039_Structs_And_Lifetime_Elision/: Cargo.toml
lessons/039_Structs_And_Lifetime_Elision/src/: main.rs
lessons/040_Box_Smart_Pointer/: Cargo.toml
lessons/041_Rc_Smart_Pointer/: Cargo.toml
lessons/041_Rc_Smart_Pointer/src/: main.rs
lessons/042_RefCell_Smart_Pointer/src/: main.rs
lessons/043_Deref_Coercion/: Cargo.toml
lessons/044_Unrecoverable_Errors/: Cargo.toml
lessons/044_Unrecoverable_Errors/src/: main.rs
lessons/045_Recoverable_Errors/: Cargo.toml
lessons/045_Recoverable_Errors/src/: main.rs
lessons/047_Result_And_Option/: Cargo.toml
lessons/047_Result_And_Option/src/: main.rs
lessons/048_Multiple_Error_Types/: Cargo.toml
lessons/048_Multiple_Error_Types/src/: main.rs
lessons/049_Basic_Error_Handling/src/: main.rs
lessons/051_Custom_Errors_2/: Cargo.toml
lessons/051_Custom_Errors_2/src/: main.rs
lessons/053_Thiserror_And_Anyhow/src/: main.rs
lessons/054_Closures/src/: main.rs
lessons/1/0_Slices/: Cargo.toml
lessons/1/1_Strings_In_Rust/: Cargo.toml
lessons/1/2_Structs/: Cargo.toml
lessons/1/3_Implementation_Blocks/: Cargo.toml
lessons/1/4_Tuple_Structs/: Cargo.toml
lessons/1/6_Matching/: Cargo.toml
lessons/1/7_Option/: Cargo.toml
lessons/1/8_Result/: Cargo.toml
lessons/2/0_Project_Structure_Overview/: Cargo.toml
lessons/2/2_Modules_Continued/: Cargo.toml
lessons/2/3_External_Dependencies/: Cargo.toml
lessons/2/4_Publishing_Your_Package/: Cargo.toml
lessons/2/5_Cargo_Features/: Cargo.toml
lessons/2/6_Cargo_Workspaces/: Cargo.toml
lessons/2/7_Unit_Tests/: Cargo.toml
lessons/2/8_Integration_Tests/: Cargo.toml
lessons/2/9_Documentation/: Cargo.toml
lessons/3/0_Generics/: Cargo.toml
lessons/3/1_Traits/: Cargo.toml
lessons/3/2_Trait_Bounds/: Cargo.toml
lessons/5/3_Thiserror_And_Anyhow/: Cargo.toml
lessons/7/5_Attribute_Like_Proceedural_Macros/: Cargo.toml
lessons/7/5_Attribute_Like_Proceedural_Macros/src/: lib.rs  main.rs
(+107 files in other folders)
