[workspace]
    exclude = ["lessons/0/0_SETUP", "lessons/2/6_Cargo_Workspaces"]
    members = ["lessons/*/*", "lessons/*/*/crates/*"]

    resolver = "2"

    [workspace.package]
        authors = ["Jade Lynn Masker <donottellmetonottellyou@gmail.com>"]
        edition = "2021"
        publish = false

    [workspace.dependencies]
        anyhow               = "1.*"
        env_logger           = "0.10.*"
        log                  = "0.4.*"
        rand                 = "0.8.*"
        thiserror            = "1.*"
        tokio                = { version = "1.*", features = ["full"] }
        tokio-stream         = "0.1.*"
        unicode-segmentation = "1.*"

[profile.dev.package."*"]
    opt-level = 3
