[workspace]
    exclude = [
        "lessons/0/0_SETUP",
        "lessons/2/6_Cargo_Workspaces",
        "lessons/7/5_stub",
        "lessons/7/6_stub",
    ]
    members = ["lessons/*/*", "lessons/*/*/crates/*"]

    resolver = "2"

    [workspace.package]
        authors = ["Jade Lynn Masker <donottellmetonottellyou@gmail.com>"]
        edition = "2021"
        publish = false

    [workspace.dependencies]

        anyhow               = "1.*"
        chrono               = "0.4.*"
        darling              = "0.20.*"
        env_logger           = "0.10.*"
        log                  = "0.4.*"
        pyo3                 = "0.19.*"
        quote                = "1.*"
        rand                 = "0.8.*"
        rust_decimal         = "1.*"
        rust_decimal_macros  = "1.*"
        syn                  = { version = "1.*", features = ["full"] }
        thiserror            = "1.*"
        tokio                = { version = "1.*", features = ["full"] }
        tokio-stream         = "0.1.*"
        unicode-segmentation = "1.*"

[profile.dev.package."*"]
    opt-level = 3
