[package]
    name    = "cargo_features"
    version = "0.1.0"

    authors.workspace = true
    edition.workspace = true
    publish.workspace = true

[dependencies]
    rgb   = { version = "0.8.*", features = ["serde"], optional = true }
    serde = { version = "1.*", features = ["derive"], optional = true }

[features]
    default = ["color"]

    color  = ["dep:rgb"]
    shapes = ["color", "dep:serde", "rgb?/serde"]
