[package]
    name    = "attribute-like-proceedural-macros"
    version = "0.1.0"

    authors.workspace = true
    edition.workspace = true
    publish.workspace = true

[lib]
    proc-macro = true

[dependencies]
    chrono.workspace  = true
    darling.workspace = true
    quote.workspace   = true
    syn.workspace     = true
